--- a/nft-front-react/package.json
+++ b/nft-front-react/package.json
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
-    "eslint-plugin-react-hooks": "^4.3.0"
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "tailwindcss": "^3.0.23"
   }
 }
